# flask-api-intro

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
flask_api_intro/: __init__.py  app.py  client.py  client_post.py  main.py  sample.py
flask_api_intro/models/: books.py
flask_api_intro/routes/: api.py  books.py
